# aiwars-wipeout

./: Cargo.toml  Dockerfile  README.md
demo/: game.js  index.html
demo-kit/: API.md  kit.js  style.css
src/: control.rs  lib.rs  main.rs  mcp.rs  view.rs  wipeout.rs
view/: app.js  index.html
