[package]
name = "aiwars-mcp-wipeout"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
name = "aiwars_mcp_wipeout"
path = "src/lib.rs"

[[bin]]
name = "aiwars-mcp-wipeout"
path = "src/main.rs"

[dependencies]
# The game-agnostic referee CORE (Game trait + Match lifecycle) is reused as-is;
# this crate only adds the Wipeout `Game` impl + its thin server wiring + view.
aiwars-mcp-warden = { path = "../mcp-warden" }
protocol = { path = "../../../protocol" }
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http = { version = "0.6", features = ["fs", "set-header", "timeout"] }
sha2 = "0.11.0"
hex = "0.4.3"
schemars = "1.2.1"
rmcp = { version = "1.7.0", features = ["server", "macros", "transport-streamable-http-server", "transport-streamable-http-server-session", "schemars", "tower"] }
